tests/ui/mismatched_types/dont-point-return-on-E0308.stderr
error[E0308]: mismatched types
  --> $DIR/dont-point-return-on-E0308.rs:11:11
   |
LL |         f(());
   |         - ^^
   |         | |
   |         | expected `&()`, found `()`
   |         | help: consider borrowing here: `&()`
   |         arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/dont-point-return-on-E0308.rs:3:10
   |
LL | async fn f(_: &()) {}
   |          ^ ------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
